@@ -1,4 +1,4 @@
-/* $ Id: $ */
+/* $Id: pstypes.h,v 1.19 2003-04-11 23:51:48 btb Exp $ */
 /*
 THE COMPUTER CODE CONTAINED HEREIN IS THE SOLE PROPERTY OF PARALLAX
 SOFTWARE CORPORATION ("PARALLAX").  PARALLAX, IN DISTRIBUTING THE CODE TO
@@ -46,7 +46,7 @@ typedef uint16_t u_int16_t;
 # include <sys/types.h>
 # define _MAX_PATH 1024
 # define _MAX_DIR 256
-# ifdef __MACOSX__
+# if defined(__APPLE__) && defined(__MACH__)
 typedef unsigned long ulong;
 # endif
 # ifdef __sun__
